// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphProcessor test simple chain with one worker in graph 1`] = `
[
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "ILCG5wN1WME1EqzV2",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "nodeStart",
    "inputs": {},
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "ILCG5wN1WME1EqzV2",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processId": "hGDGohaglR6iZMF9b",
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "nodeFinish",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "ILCG5wN1WME1EqzV2",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "outputs": {
      "prompt": {
        "type": "chat-message[]",
        "value": [
          {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "human",
              "HumanMessage",
            ],
            "_kwargs": {
              "content": "Who are you?",
            },
            "_type": "constructor",
          },
        ],
      },
    },
    "processId": "hGDGohaglR6iZMF9b",
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "Zve@NA10D0N6C1JTm",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "ILCG5wN1WME1EqzV2",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "nodeStart",
    "inputs": {
      "prompt": {
        "type": "chat-message[]",
        "value": [
          {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "human",
              "HumanMessage",
            ],
            "_kwargs": {
              "content": "Who are you?",
            },
            "_type": "constructor",
          },
        ],
      },
    },
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "Zve@NA10D0N6C1JTm",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processId": "lTE0sagK0coTYxFL1",
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "nodeFinish",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "Zve@NA10D0N6C1JTm",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "outputs": {
      "info": {
        "type": "object",
        "value": {
          "finishReason": "stop",
        },
      },
      "message": {
        "type": "chat-message",
        "value": {
          "_grp": 1,
          "_id": [
            "events",
            "input",
            "load",
            "msgs",
            "assistant",
            "BotMessage",
          ],
          "_kwargs": {
            "additional_kwargs": {},
            "content": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
          },
          "_type": "constructor",
        },
      },
      "output": {
        "type": "string",
        "value": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
      },
      "tokenUsage": {
        "type": "object",
        "value": {
          "completionTokens": 22,
          "promptTokens": 11,
          "totalTokens": 33,
        },
      },
    },
    "processId": "lTE0sagK0coTYxFL1",
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "graphFinish",
    "graph": {
      "_grp": 1,
      "_id": [
        "studio",
        "graph",
        "MockSingleWorkerGraph",
      ],
      "_kwargs": {
        "connections": [
          {
            "fromNodeId": "ILCG5wN1WME1EqzV2",
            "fromPortName": "prompt",
            "toNodeId": "Zve@NA10D0N6C1JTm",
            "toPortName": "prompt",
          },
        ],
        "nodes": [
          {
            "data": {
              "_grp": 1,
              "_id": [
                "events",
                "input",
                "load",
                "prompts",
                "text",
                "StringPrompt",
              ],
              "_kwargs": {
                "value": "Who are you?",
              },
              "_type": "constructor",
            },
            "id": "ILCG5wN1WME1EqzV2",
            "inputs": {},
            "outputs": {
              "prompt": [
                "string",
                "chat-message[]",
              ],
            },
            "subType": "string",
            "type": "prompt",
            "visualInfo": {
              "position": {
                "x": 0,
                "y": 0,
              },
              "size": {
                "height": 500,
                "width": 300,
              },
            },
          },
          {
            "data": {
              "_grp": 1,
              "_id": [
                "events",
                "inference",
                "chat",
                "chatlms",
                "openai",
                "OpenAIChat",
              ],
              "_kwargs": {
                "additional_kwargs": {},
                "callbacks": undefined,
                "frequency_penalty": 0,
                "logit_bias": undefined,
                "max_tokens": 2048,
                "model": "gpt-3.5-turbo",
                "openai_api_key": {
                  "_grp": 1,
                  "_id": [
                    "OPENAI_API_KEY",
                  ],
                  "_type": "secret",
                },
                "presence_penalty": 0,
                "response_format_type": undefined,
                "seed": undefined,
                "stop_words": undefined,
                "stream": false,
                "temperature": 1,
                "timeout": undefined,
                "top_p": 1,
                "user": undefined,
                "verbose": undefined,
              },
              "_type": "constructor",
            },
            "id": "Zve@NA10D0N6C1JTm",
            "inputs": {
              "prompt": [
                "string",
                "chat-message[]",
              ],
            },
            "outputs": {
              "info": [
                "object",
                "unknown",
              ],
              "message": "chat-message",
              "output": "string",
              "tokenUsage": [
                "object",
                "unknown",
              ],
            },
            "subType": "openai",
            "type": "chatlm",
            "visualInfo": {
              "position": {
                "x": 0,
                "y": 0,
              },
              "size": {
                "height": 500,
                "width": 300,
              },
            },
          },
        ],
      },
      "_type": "constructor",
    },
    "isSubProcessor": false,
    "outputs": {
      "Zve@NA10D0N6C1JTm": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 22,
            "promptTokens": 11,
            "totalTokens": 33,
          },
        },
      },
    },
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
  {
    "#type": "done",
    "isSubProcessor": false,
    "processorId": "aa9wyx3gRkVY3C5ey",
    "results": {
      "Zve@NA10D0N6C1JTm": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant designed to provide information and assistance to users. How can I assist you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 22,
            "promptTokens": 11,
            "totalTokens": 33,
          },
        },
      },
    },
  },
  {
    "#type": "finish",
    "isSubProcessor": false,
    "processorId": "aa9wyx3gRkVY3C5ey",
  },
]
`;

exports[`GraphProcessor test simple chain with two worker in graph 1`] = `
[
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "5xuRTfqF9qsxLyp5n",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "nodeStart",
    "inputs": {},
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "5xuRTfqF9qsxLyp5n",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processId": "jhnEBPX78sFI3jn6g",
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "nodeFinish",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "5xuRTfqF9qsxLyp5n",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "outputs": {
      "prompt": {
        "type": "chat-message[]",
        "value": [
          {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "human",
              "HumanMessage",
            ],
            "_kwargs": {
              "content": "Who are you?",
            },
            "_type": "constructor",
          },
        ],
      },
    },
    "processId": "jhnEBPX78sFI3jn6g",
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "o93DwrXLlj5nUZaCQ",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "input",
          "load",
          "prompts",
          "text",
          "StringPrompt",
        ],
        "_kwargs": {
          "value": "Who are you?",
        },
        "_type": "constructor",
      },
      "id": "5xuRTfqF9qsxLyp5n",
      "inputs": {},
      "outputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "subType": "string",
      "type": "prompt",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "nodeStart",
    "inputs": {
      "prompt": {
        "type": "chat-message[]",
        "value": [
          {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "human",
              "HumanMessage",
            ],
            "_kwargs": {
              "content": "Who are you?",
            },
            "_type": "constructor",
          },
        ],
      },
    },
    "isSubProcessor": true,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "o93DwrXLlj5nUZaCQ",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processId": "2zR6tquytMfGm8eHi",
    "processorId": "G3rkMdtssqrej5d1P",
  },
  {
    "#type": "nodeFinish",
    "isSubProcessor": true,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "o93DwrXLlj5nUZaCQ",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "outputs": {
      "info": {
        "type": "object",
        "value": {
          "finishReason": "stop",
        },
      },
      "message": {
        "type": "chat-message",
        "value": {
          "_grp": 1,
          "_id": [
            "events",
            "input",
            "load",
            "msgs",
            "assistant",
            "BotMessage",
          ],
          "_kwargs": {
            "additional_kwargs": {},
            "content": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
          },
          "_type": "constructor",
        },
      },
      "output": {
        "type": "string",
        "value": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
      },
      "tokenUsage": {
        "type": "object",
        "value": {
          "completionTokens": 24,
          "promptTokens": 11,
          "totalTokens": 35,
        },
      },
    },
    "processId": "2zR6tquytMfGm8eHi",
    "processorId": "G3rkMdtssqrej5d1P",
  },
  {
    "#type": "graphFinish",
    "graph": {
      "_grp": 1,
      "_id": [
        "studio",
        "graph",
        "MockTwoWorkersGraph",
      ],
      "_kwargs": {
        "connections": [
          {
            "fromNodeId": "5xuRTfqF9qsxLyp5n",
            "fromPortName": "prompt",
            "toNodeId": "o93DwrXLlj5nUZaCQ",
            "toPortName": "prompt",
          },
        ],
        "nodes": [
          {
            "data": {
              "_grp": 1,
              "_id": [
                "events",
                "input",
                "load",
                "prompts",
                "text",
                "StringPrompt",
              ],
              "_kwargs": {
                "value": "Who are you?",
              },
              "_type": "constructor",
            },
            "id": "5xuRTfqF9qsxLyp5n",
            "inputs": {},
            "outputs": {
              "prompt": [
                "string",
                "chat-message[]",
              ],
            },
            "subType": "string",
            "type": "prompt",
            "visualInfo": {
              "position": {
                "x": 0,
                "y": 0,
              },
              "size": {
                "height": 500,
                "width": 300,
              },
            },
          },
          {
            "data": {
              "_grp": 1,
              "_id": [
                "events",
                "inference",
                "chat",
                "chatlms",
                "openai",
                "OpenAIChat",
              ],
              "_kwargs": {
                "additional_kwargs": {},
                "callbacks": undefined,
                "frequency_penalty": 0,
                "logit_bias": undefined,
                "max_tokens": 2048,
                "model": "gpt-3.5-turbo",
                "openai_api_key": {
                  "_grp": 1,
                  "_id": [
                    "OPENAI_API_KEY",
                  ],
                  "_type": "secret",
                },
                "presence_penalty": 0,
                "response_format_type": undefined,
                "seed": undefined,
                "stop_words": undefined,
                "stream": false,
                "temperature": 1,
                "timeout": undefined,
                "top_p": 1,
                "user": undefined,
                "verbose": undefined,
              },
              "_type": "constructor",
            },
            "id": "o93DwrXLlj5nUZaCQ",
            "inputs": {
              "prompt": [
                "string",
                "chat-message[]",
              ],
            },
            "outputs": {
              "info": [
                "object",
                "unknown",
              ],
              "message": "chat-message",
              "output": "string",
              "tokenUsage": [
                "object",
                "unknown",
              ],
            },
            "subType": "openai",
            "type": "chatlm",
            "visualInfo": {
              "position": {
                "x": 0,
                "y": 0,
              },
              "size": {
                "height": 500,
                "width": 300,
              },
            },
          },
        ],
      },
      "_type": "constructor",
    },
    "isSubProcessor": false,
    "outputs": {
      "o93DwrXLlj5nUZaCQ": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 24,
            "promptTokens": 11,
            "totalTokens": 35,
          },
        },
      },
    },
    "processorId": "T8OnP6l8PdcA3YheP",
  },
  {
    "#type": "done",
    "isSubProcessor": false,
    "processorId": "T8OnP6l8PdcA3YheP",
    "results": {
      "o93DwrXLlj5nUZaCQ": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant designed to help answer questions and assist with various tasks. How can I help you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 24,
            "promptTokens": 11,
            "totalTokens": 35,
          },
        },
      },
    },
  },
  {
    "#type": "finish",
    "isSubProcessor": false,
    "processorId": "T8OnP6l8PdcA3YheP",
  },
]
`;

exports[`GraphProcessor test simple node in graph 1`] = `
[
  {
    "#type": "processInQueue",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "0PV8T4Qru0PO_5XzP",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processorId": "k3YFYAr1IUcoz3EJt",
  },
  {
    "#type": "nodeStart",
    "inputs": {
      "prompt": {
        "type": "string",
        "value": "Who are you?",
      },
    },
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "0PV8T4Qru0PO_5XzP",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "processId": "CGNcEa360CfFvNYEK",
    "processorId": "k3YFYAr1IUcoz3EJt",
  },
  {
    "#type": "nodeFinish",
    "isSubProcessor": false,
    "node": {
      "data": {
        "_grp": 1,
        "_id": [
          "events",
          "inference",
          "chat",
          "chatlms",
          "openai",
          "OpenAIChat",
        ],
        "_kwargs": {
          "additional_kwargs": {},
          "callbacks": undefined,
          "frequency_penalty": 0,
          "logit_bias": undefined,
          "max_tokens": 2048,
          "model": "gpt-3.5-turbo",
          "openai_api_key": {
            "_grp": 1,
            "_id": [
              "OPENAI_API_KEY",
            ],
            "_type": "secret",
          },
          "presence_penalty": 0,
          "response_format_type": undefined,
          "seed": undefined,
          "stop_words": undefined,
          "stream": false,
          "temperature": 1,
          "timeout": undefined,
          "top_p": 1,
          "user": undefined,
          "verbose": undefined,
        },
        "_type": "constructor",
      },
      "id": "0PV8T4Qru0PO_5XzP",
      "inputs": {
        "prompt": [
          "string",
          "chat-message[]",
        ],
      },
      "outputs": {
        "info": [
          "object",
          "unknown",
        ],
        "message": "chat-message",
        "output": "string",
        "tokenUsage": [
          "object",
          "unknown",
        ],
      },
      "subType": "openai",
      "type": "chatlm",
      "visualInfo": {
        "position": {
          "x": 0,
          "y": 0,
        },
        "size": {
          "height": 500,
          "width": 300,
        },
      },
    },
    "outputs": {
      "info": {
        "type": "object",
        "value": {
          "finishReason": "stop",
        },
      },
      "message": {
        "type": "chat-message",
        "value": {
          "_grp": 1,
          "_id": [
            "events",
            "input",
            "load",
            "msgs",
            "assistant",
            "BotMessage",
          ],
          "_kwargs": {
            "additional_kwargs": {},
            "content": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
          },
          "_type": "constructor",
        },
      },
      "output": {
        "type": "string",
        "value": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
      },
      "tokenUsage": {
        "type": "object",
        "value": {
          "completionTokens": 22,
          "promptTokens": 11,
          "totalTokens": 33,
        },
      },
    },
    "processId": "CGNcEa360CfFvNYEK",
    "processorId": "k3YFYAr1IUcoz3EJt",
  },
  {
    "#type": "graphFinish",
    "graph": {
      "_grp": 1,
      "_id": [
        "studio",
        "graph",
        "MockSingleWorkerGraph",
      ],
      "_kwargs": {
        "connections": [],
        "nodes": [
          {
            "data": {
              "_grp": 1,
              "_id": [
                "events",
                "inference",
                "chat",
                "chatlms",
                "openai",
                "OpenAIChat",
              ],
              "_kwargs": {
                "additional_kwargs": {},
                "callbacks": undefined,
                "frequency_penalty": 0,
                "logit_bias": undefined,
                "max_tokens": 2048,
                "model": "gpt-3.5-turbo",
                "openai_api_key": {
                  "_grp": 1,
                  "_id": [
                    "OPENAI_API_KEY",
                  ],
                  "_type": "secret",
                },
                "presence_penalty": 0,
                "response_format_type": undefined,
                "seed": undefined,
                "stop_words": undefined,
                "stream": false,
                "temperature": 1,
                "timeout": undefined,
                "top_p": 1,
                "user": undefined,
                "verbose": undefined,
              },
              "_type": "constructor",
            },
            "id": "0PV8T4Qru0PO_5XzP",
            "inputs": {
              "prompt": [
                "string",
                "chat-message[]",
              ],
            },
            "outputs": {
              "info": [
                "object",
                "unknown",
              ],
              "message": "chat-message",
              "output": "string",
              "tokenUsage": [
                "object",
                "unknown",
              ],
            },
            "subType": "openai",
            "type": "chatlm",
            "visualInfo": {
              "position": {
                "x": 0,
                "y": 0,
              },
              "size": {
                "height": 500,
                "width": 300,
              },
            },
          },
        ],
      },
      "_type": "constructor",
    },
    "isSubProcessor": false,
    "outputs": {
      "0PV8T4Qru0PO_5XzP": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 22,
            "promptTokens": 11,
            "totalTokens": 33,
          },
        },
      },
    },
    "processorId": "k3YFYAr1IUcoz3EJt",
  },
  {
    "#type": "done",
    "isSubProcessor": false,
    "processorId": "k3YFYAr1IUcoz3EJt",
    "results": {
      "0PV8T4Qru0PO_5XzP": {
        "info": {
          "type": "object",
          "value": {
            "finishReason": "stop",
          },
        },
        "message": {
          "type": "chat-message",
          "value": {
            "_grp": 1,
            "_id": [
              "events",
              "input",
              "load",
              "msgs",
              "assistant",
              "BotMessage",
            ],
            "_kwargs": {
              "additional_kwargs": {},
              "content": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
            },
            "_type": "constructor",
          },
        },
        "output": {
          "type": "string",
          "value": "I am an AI digital assistant created to provide information and assistance to users. How can I help you today?",
        },
        "tokenUsage": {
          "type": "object",
          "value": {
            "completionTokens": 22,
            "promptTokens": 11,
            "totalTokens": 33,
          },
        },
      },
    },
  },
  {
    "#type": "finish",
    "isSubProcessor": false,
    "processorId": "k3YFYAr1IUcoz3EJt",
  },
]
`;
